# data-zentao

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
docs/: 数据口径.md
skills/zentao-data-assistant/: SKILL.md
skills/zentao-data-assistant/agents/: openai.yaml
skills/zentao-data-assistant/references/: bug-quality.md  core-schema.md  demand-task-project.md  query-playbook.md  report-rules.md  self-check-and-risks.md  status-and-dictionaries.md
src/data_zentao/: __init__.py  auth.py  cli.py  config.py  db.py  formatting.py  reports.py  repository.py  router.py  update_check.py
