[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "data-zentao"
version = "0.9.1"
description = "Read-only ZenTao data assistant for project reports."
requires-python = ">=3.10"
dependencies = [
  "pymysql>=1.1.0",
  "python-dotenv>=1.0.1",
]

[project.scripts]
data-zentao = "data_zentao.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
